--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="content">
       <iframe src="https://giphy.com/embed/qRtwZkH3TaQrJuAUmp" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
       <div class="text">
-        Will you 🐝 my Valentine?
+        Will You 🐝 my Valentine?
       </div>
       <div class="button-container">
         <a href="https://www.jibjab.com/view/make/un-bee-lievable-sg/c20f2c18-e424-4b0f-9824-50fa67ebafc7"><button type="button" id="y">YES</button></a>
